fix: Overpass queries — apply (around:RADIUS) to every filter line
Root cause: with multi-statement union queries, the (around:...) suffix
was appended only once after the last statement, so all categories with
more than one filter line (transportes, supermercados, saúde, escolas,
parques, ginásios) fetched globally instead of within the radius and
returned 0 results. Only single-statement categories (farmácias, cafés)
worked correctly.

Fix: each filter line now receives its own (around:RADIUS,lat,lng)
constraint so all 8 categories are properly geo-constrained.

Also:
- Improved filter coverage (brand tag for convenience stores, ferry
  terminals, sports_hall, food_court, etc.)
- Added brand name fallback when OSM name tag is missing
- ZoneSnapshotService marks existing 'processed' snapshots as 'stale'
  instead of skipping, so re-triggers work correctly

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>